--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,40 +3,23 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  color: white;
+}
+
+.background {
+  background-color: #1a2026;
+  background-size: cover; /* Ensures the image covers the whole area */
+  background-repeat: repeat; /* Prevents the image from repeating */
+  background-position: center; /* Centers the image */
+  height: 100%; /* Full viewport height */
+  width: 100%; /* Full viewport width */
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
 }
 
 .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+  width: 300px;
+  height: 300px;
 }
