--- a/client/src/components/UI/Cart.css
+++ b/client/src/components/UI/Cart.css
@@ -3,18 +3,19 @@
 }
 
 .cart-modal {
-  position: fixed;
-  top: 17%;
-  right: 3%;
   background-color: white;
-  padding: 20px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-  z-index: 1000;
   border-radius: 8px;
-}
-
-.cart-modal-content {
-  max-width: 300px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  box-sizing: border-box;
+  max-height: 400px;
+  opacity: 0.95;
+  overflow-y: auto;
+  padding: 20px;
+  position: absolute;
+  right: -16%;
+  top: 160%;
+  width: 300px;
+  z-index: 1000;
 }
 
 .cart-modal ul {
@@ -25,5 +26,8 @@
 .cart-modal li {
   display: flex;
   justify-content: space-between;
-  /* margin-bottom: 8px; */
+}
+
+.cart-modal-content {
+  max-width: 100%;
 }
