update styling for Cart

--- a/client/src/components/UI/Cart.css
+++ b/client/src/components/UI/Cart.css
@@ -10,11 +10,11 @@
   max-height: 400px;
   opacity: 0.95;
   overflow-y: auto;
-  padding: 20px;
+  /* padding: 10px; */
   position: absolute;
   right: -16%;
   top: 160%;
-  width: 300px;
+  width: 250px;
   z-index: 1000;
 }
 
